# FarkoGPT

./: LICENSE  pyproject.toml
notebooks/: multihead_attention.ipynb  self_attention.ipynb
src/farko_gpt/: __init__.py
